tests/lifetime_inference/escaping_local_alt_error.june
// error: allocation is not local, lifetime inferred to be return

struct Stats {
    age: i64
}

fun foo() -> Stats {
    return new(local) Stats(age: 100)
}

fun main() {
    println(foo().age)
}